[package]
name = "philiprehberger-webhook-signature"
version = "0.3.7"
edition = "2021"
authors = ["Philip Rehberger"]
description = "HMAC-SHA256 webhook signing and verification for Rust"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-webhook-signature"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/philiprehberger-webhook-signature"
keywords = ["webhook", "hmac", "signature", "verification", "security"]
categories = ["authentication", "web-programming"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
